--- a/css/styles.css
+++ b/css/styles.css
@@ -58,3 +58,39 @@ main p {
   border-radius: 12px;
   background-color: var(--Very-pale-blue);
 }
+
+.plan:nth-child(3) {
+  color: var(--a-color);
+  font-weight: 900;
+  align-items: center;
+}
+
+.plan__type-plan :nth-child(1) {
+  color: var(--Dark-blue);
+  font-weight: 900;
+}
+.plan__type-plan :nth-child(2) {
+  color: var(--Desaturated-blue);
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px 24px 24px;
+}
+.button-container > button {
+  font-family: "Red Hat Display", sans-serif;
+  height: 48px;
+  border-radius: 12px;
+  margin-bottom: 4px;
+  border: none;
+  font-weight: 900;
+}
+.button-container__payment {
+  background-color: var(--Bright-blue);
+  color: var(--Very-pale-blue);
+}
+.button-container__cancel {
+  background-color: var(--Very-pale-blue);
+  color: var(--Desaturated-blue);
+}
